--- a/css/styles.css
+++ b/css/styles.css
@@ -49,5 +49,15 @@ body {
     height: auto;
 }
 
+@media only screen and (max-width: 1200px){}
 
+@media only screen and (max-width: 1024px){}
+
+@media only screen and (max-width: 768px) {
+    .container {
+        max-width: 90%;
+    }
+}
+
+@media only screen and (max-width: 480px) {}
 
