--- a/css/header.css
+++ b/css/header.css
@@ -164,6 +164,17 @@
         }
     }
 }
+@media only screen and (max-width: 1200px){}
 
+@media only screen and (max-width: 1024px) {
+    .header {
+        display: none;
+    }
+
+}
+
+@media only screen and (max-width: 768px){}
+
+@media only screen and (max-width: 480px) {}
 
 
