--- a/css/mobinav.css
+++ b/css/mobinav.css
@@ -140,6 +140,48 @@
     transform: translateX(440px);
     
 }
+
+@media only screen and (max-width: 1200px){}
+
+@media only screen and (max-width: 1024px) {
+    .mobi_nav {
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 768px){}
+
+@media only screen and (max-width: 480px) {
+    .mobile__contact {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        display: inherit;
+        width: 100%;
+        height: 50px;
+        background-color: var(--primary);
+        z-index: 999;
+
+        & .contact__phone {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 50px;
+        }
+
+        & .contact__message {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 50px;
+        }
+
+        & i {
+            color: var(--golden);
+        }
+    }
+}
+
 @keyframes fadeIn{
     from{
         opacity: 0;
