--- a/css/navbar.css
+++ b/css/navbar.css
@@ -11,6 +11,7 @@
     background-color: var(--white);
     z-index: 99;
     animation: fade-in-top linear 0.5s;
+    border-bottom: none;
 
 
     & .dropdown__title {
@@ -166,6 +167,7 @@
     text-decoration: none;
     color: var(--white);
     font-size: 16px;
+    
 
     &:hover {
         color: var(--golden);
@@ -185,7 +187,6 @@
 
 .singlemenu {
     width: 100%;
-    
     padding: 10px ;
     list-style: circle;
 
@@ -200,7 +201,7 @@
     min-width: 1000px;
     padding: 20px;
     margin: 0;
-
+    
     & a {
         text-decoration: none;
     }
@@ -283,6 +284,62 @@
 .mobi_nav {
     display: none;
 }
+
+@media only screen and (max-width: 1200px) {
+    .dropdown__title:nth-child(6) {
+        display: none;
+    }
+
+    .dropdown__title:nth-child(7) {
+        display: none;
+    }
+
+    .dropdown__title:nth-child(8) {
+        display: none;
+    }
+
+    .megamenu {
+        position: absolute;
+        left: -100%;
+    }
+
+    .contactbar__container .contactbar__chatbox {
+        width: 80%;
+    }
+
+}
+
+@media only screen and (max-width: 1024px) {
+    .navigation {
+        
+        & .nav__menu {
+            display: none;
+        }
+
+        & .contactbar__container {
+            display: block;
+        }
+    }
+
+    .contactbar__container {
+    
+        & .contactbar__heading {
+            display: none;
+        }
+    }
+    .fixed {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 768px){}
+
+@media only screen and (max-width: 480px) {
+    .navigation {
+        display: none;
+     }
+}
+
 
 @keyframes fade-in-top {
     0% {
